# smartcar-competition

./: .gitignore  README.md  技术报告.docx
nano_flash/: Linux_for_Tegra-1.6.0.33.tar.xz  flash_all.sh  flash_config  flash_emmc.sh  flash_tf.sh  tf_check.py
src/: fame_data.txt
src/ang_line_follow/: CMakeLists.txt  package.xml
src/ang_line_follow/cfg/: HSVThreshold.cfg
src/ang_line_follow/config/: image.cfg
src/ang_line_follow/launch/: line_follower.launch
src/ang_line_follow/src/: ang_line_follow.cpp  image_hsv.cpp
src/darknet_ros/darknet_ros/: CMakeLists.txt
src/line_follower/: package.xml
src/line_follower/launch/: line_follower.launch
src/line_follower/src/: line_follower_node.cpp
src/line_follower2/: CMakeLists.txt  package.xml
src/line_follower2/cfg/: HSVThreshold.cfg
src/line_follower2/config/: image.cfg  pid.cfg
src/line_follower2/src/: image_hsv.cpp  line_follower2_node.cpp
src/main/: close.py  go_m.py  last_main.py  last_main1.py  lidar_d.py  main.sh  main1.sh  obstacle_avoidance.py  t_dis.py  video_recoder.py
src/main/launch/: main.launch  start.launch  teb_navigation.launch
src/main/navacation/: main1.sh  multiply_goal.py  navacation-super.py  navacation-tracking.py  one_goal.py
src/race_navigation/launch/: amcl.launch  teb_base.launch
src/race_navigation/maps/: map3.pgm  map3.yaml  map4.pgm  map4.yaml  map5.pgm  map5.yaml  map712.pgm  map712.yaml  map7121.pgm  map7121.yaml  mymap.pgm  mymap.yaml  mymap1.pgm  mymap1.yaml
src/ucar_camera/launch/: camera.launch
src/ucar_camera/src/: save_photo.py
src/ucar_controller/log_info/: car_Mileage_info.txt.bp
src/ucar_map/launch/: save_map.launch
src/vision/: curve_detector.py  curve_detector_path.py  line_detector.py
src/voice_test/: CMakeLists.txt  package.xml
src/voice_test/launch/: voice_test.launch
src/voice_test/src/: voice_test.cpp
src/xf_mic_asr_offline/: CMakeLists.txt
src/xf_mic_asr_offline/include/: user_interface.h
(+24 files in other folders)
